// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 1`] = `12`;

exports[`Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 2`] = `15`;

exports[`Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 3`] = `22`;

exports[`Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 4`] = `28`;

exports[`Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 5`] = `29`;

exports[`Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 6`] = `36`;

exports[`Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 7`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 15,
    "starti": 12,
  },
]
`;

exports[`Test 2 simple INvalid SET ACTION, with lowercased keyword Should have error 8`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 28,
    "starti": 22,
  },
  Object {
    "diagnostic": Object {
      "message": "Invalid keyword \\"invalid\\" specified after SET ACTION.
Valid keywords: ADD, ARCHIVE, COPY, DELETE, GENERATE, LIST, MOVE, PRINT, RESTORE, RETRIEVE, SIGNIN, TRANSFER, UPDATE, VALIDATE",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 36,
    "starti": 29,
  },
]
`;

exports[`Test 4 simple INvalid SET ACTION Should have error 1`] = `12`;

exports[`Test 4 simple INvalid SET ACTION Should have error 2`] = `19`;

exports[`Test 4 simple INvalid SET ACTION Should have error 3`] = `29`;

exports[`Test 4 simple INvalid SET ACTION Should have error 4`] = `30`;

exports[`Test 4 simple INvalid SET ACTION Should have error 5`] = `45`;

exports[`Test 4 simple INvalid SET ACTION Should have error 6`] = `46`;

exports[`Test 4 simple INvalid SET ACTION Should have error 7`] = `58`;

exports[`Test 4 simple INvalid SET ACTION Should have error 8`] = `61`;

exports[`Test 4 simple INvalid SET ACTION Should have error 9`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Invalid keyword \\"INVALID\\" specified after SET ACTION.
Valid keywords: ADD, ARCHIVE, COPY, DELETE, GENERATE, LIST, MOVE, PRINT, RESTORE, RETRIEVE, SIGNIN, TRANSFER, UPDATE, VALIDATE",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 19,
    "starti": 12,
  },
]
`;

exports[`Test 4 simple INvalid SET ACTION Should have error 10`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Invalid keyword \\".\\" specified after SET.
Valid keywords: ACTION, BUILD, FROM, OPTIONS, STOPRC, TO, WHERE",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 30,
    "starti": 29,
  },
]
`;

exports[`Test 4 simple INvalid SET ACTION Should have error 11`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Invalid scl. Expecting a space before end of statement operator \\".\\".",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 46,
    "starti": 45,
  },
]
`;

exports[`Test 4 simple INvalid SET ACTION Should have error 12`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Invalid scl. No end of statement operator \\".\\" specified.",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 61,
    "starti": 58,
  },
]
`;
